# rag_system

./: .gitignore  README.md  experiments.py  pyproject.toml
app/: main.py
app/components/: history_iteraction.py
app/utils/: db.py  rag.py
experimentos/: bertscore_results.csv  ground_truth.json  metrics.py  modelo_1_bertscore_results.csv  modelo_1_bertscore_results_execucao_2_alucinados.csv  modelo_2_bertscore_results.csv  resultados_experimento_1.csv
